--- a/sass/base/_var.scss
+++ b/sass/base/_var.scss
@@ -2,7 +2,7 @@
 // Color
 // ----------------------------------------------------------------------
 //basic color
-$gray-base:              #000 !default;
+$gray-base:              #333 !default;
 $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
 $gray-dark:              lighten($gray-base, 20%) !default;   // #333
 $gray:                   lighten($gray-base, 33.5%) !default; // #555
@@ -87,4 +87,4 @@ $large: 1200px;
 $gap: 15px;
 
 //header nav
-$navColor : #769eaf;
+$navColor : #EAAF88;
