--- a/css/header.css
+++ b/css/header.css
@@ -60,7 +60,7 @@ header {
   height: 100vh;
   position: fixed;
   padding-left: 15px;
-  box-shadow: 2px 0 10px rgba(53, 53, 53, 0.315); }
+  box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315); }
   header .logo {
     position: relative;
     top: 70px;
@@ -68,7 +68,7 @@ header {
     text-align: center; }
     header .logo a {
       text-decoration: none;
-      color: #000; }
+      color: #333; }
     header .logo img {
       width: 90%; }
   header ul {
@@ -78,7 +78,7 @@ header {
       margin: 1px 0;
       position: relative; }
       header ul li:hover {
-        background-color: #769eaf;
+        background-color: #EAAF88;
         transition: .3s; }
       header ul li:hover a {
         color: #fff;
