--- a/sass/header.scss
+++ b/sass/header.scss
@@ -2,6 +2,7 @@
 @import 'base/_var.scss';
 @import 'base/_boxsizing.scss';
 @import 'mixins/_afterClear.scss';
+@import './mixins/_navNow.scss';
 @import 'base/_font.scss';
 @import 'modules/_header.scss';
 @import 'mixins/_rwd.scss';
