--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,7 +8,7 @@
 @import './layout/_container.scss';
 @import 'modules/_footer.scss';
 @import './modules/_header.scss';
-@import './modules/_member.scss';
+@import './modules/_index.scss';
 @import 'mixins/_rwd.scss';
 @import 'respond/_small.scss';
 @import 'respond/_medium.scss';
