--- a/css/member.css
+++ b/css/member.css
@@ -153,7 +153,7 @@ footer {
     padding: 10px; }
 
 header {
-  background-color: #fff;
+  background-color: #EAAF88;
   width: 200px;
   height: 100vh;
   position: fixed;
@@ -166,7 +166,7 @@ header {
     text-align: center; }
     header .logo a {
       text-decoration: none;
-      color: #333; }
+      color: #fff; }
     header .logo img {
       width: 90%; }
   header ul {
@@ -176,15 +176,16 @@ header {
       margin: 1px 0;
       position: relative; }
       header ul li:hover {
-        background-color: #EAAF88;
+        background-color: #fff;
+        box-shadow: -2px 3px 6px rgba(63, 62, 62, 0.397);
         transition: .3s; }
       header ul li:hover a {
-        color: #fff;
+        color: #000;
         transition: .3s; }
       header ul li a {
         width: 185px;
         display: block;
-        color: #333;
+        color: #fff;
         text-decoration: none;
         font-size: 18px;
         padding: 15px 20px; }
@@ -209,7 +210,7 @@ header {
       font-family: notoSans_b; }
     header .icons a {
       text-decoration: none;
-      color: #333; }
+      color: #fff; }
 
 header ul li:nth-child(5) {
   background-color: #EAAF88; }
