--- a/css/index.css
+++ b/css/index.css
@@ -211,3 +211,10 @@ header {
     header .icons a {
       text-decoration: none;
       color: #fff; }
+
+.banner {
+  margin-left: 200px;
+  height: 100vh;
+  background-image: url(../../images/AdobeStock_112482963.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover; }
