--- a/css/index.css
+++ b/css/index.css
@@ -214,6 +214,9 @@ header {
     header .icons a {
       text-decoration: none;
       color: #fff; }
+      header .icons a:hover {
+        transform: scale(1.15);
+        transition: .3s; }
 
 .banner {
   margin-left: 200px;
