--- a/css/index.css
+++ b/css/index.css
@@ -234,7 +234,7 @@ header {
     font-size: 18px; }
     .banner .find img, .banner .wait img {
       width: 40px;
-      height: 60px;
+      height: 55px;
       vertical-align: middle; }
   .banner .search {
     position: relative; }
@@ -283,4 +283,39 @@ header {
   .shop .shop-right {
     top: -300px; }
   .shop .shop-title {
-    float: left; }
+    margin-top: 15vh; }
+    .shop .shop-title h2 {
+      color: #fff;
+      background-color: #333;
+      padding: 15px 30px;
+      margin: 15px 0;
+      font-size: 18px; }
+    .shop .shop-title h3 {
+      color: #333;
+      background-color: rgba(144, 143, 143, 0.537);
+      padding: 10px 30px;
+      border: 2px solid #333;
+      margin: 15px 0; }
+  .shop .prod-list {
+    padding: 60px 40px;
+    background-color: rgba(144, 143, 143, 0.537);
+    border: 2px solid #fff;
+    margin-top: 60px; }
+    .shop .prod-list li {
+      position: relative; }
+      .shop .prod-list li a {
+        text-decoration: none;
+        color: #333;
+        padding: 15px;
+        display: block; }
+      .shop .prod-list li:hover:after {
+        position: absolute;
+        content: '';
+        bottom: 0;
+        left: 10px;
+        display: block;
+        width: 105px;
+        height: 2px;
+        background-color: #369;
+        opacity: 0.7;
+        transition: .3s; }
