--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -14,7 +14,7 @@
         font-size: $font-size-large;
         img{            
             width: 40px;
-            height: 60px;
+            height: 55px;
             vertical-align: middle;
         }
     }
@@ -76,6 +76,47 @@
         top: -300px;
     }
     .shop-title{
-        float: left;
+        margin-top: 15vh;
+        h2{
+            color: #fff;
+            background-color: #333;
+            padding: 15px 30px;
+            margin: $gap 0;
+            font-size: $font-size-h4;
+        }
+        h3{
+            color: #333;
+            background-color: rgba(144, 143, 143, 0.537);
+            padding: 10px 30px;
+            border: 2px solid #333;
+            margin: $gap 0;
+        }
+    }
+    .prod-list{
+        padding: 60px 40px;
+        background-color: rgba(144, 143, 143, 0.537);
+        border: 2px solid #fff;
+        margin-top: 60px;
+        li{
+            position: relative;
+            a{
+                text-decoration: none;
+                color: #333;
+                padding: $gap;
+                display: block;
+            }
+            &:hover:after{
+                position: absolute;
+                content: '';
+                bottom:0;
+                left: 10px;
+                display: block;
+                width: 105px;
+                height: 2px;
+                background-color: #369;
+                opacity: 0.7;
+                transition: .3s;
+            }
+        }
     }
 }
