--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
 v2.0 | 20110126
 License: none (public domain)
@@ -319,3 +320,55 @@ header {
         background-color: #369;
         opacity: 0.7;
         transition: .3s; }
+
+.pick-kit {
+  margin-left: 200px;
+  text-align: center;
+  height: 100vh;
+  position: relative; }
+  .pick-kit ul {
+    width: 100%;
+    height: 80vh;
+    position: absolute;
+    bottom: 0; }
+    .pick-kit ul a {
+      text-decoration: none;
+      color: #333; }
+      .pick-kit ul a li {
+        width: 33.33333%;
+        height: 100%;
+        float: left; }
+      .pick-kit ul a .bubble {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        display: block;
+        background-color: rgba(255, 255, 255, 0.687);
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; }
+        .pick-kit ul a .bubble span {
+          display: block;
+          padding: 5px; }
+      .pick-kit ul a:nth-child(odd) .bubble {
+        position: relative;
+        top: 50%; }
+      .pick-kit ul a:nth-child(even) .bubble {
+        position: relative;
+        top: 10%; }
+      .pick-kit ul a:nth-child(1) li {
+        background-image: url(../../images/貓貓_171225_0011.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center; }
+      .pick-kit ul a:nth-child(2) li {
+        background-image: url(../../images/貓貓_171225_0010.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center; }
+      .pick-kit ul a:nth-child(3) li {
+        background-image: url(../../images/貓貓_171228_0012.jpg);
+        background-repeat: no-repeat;
+        background-size: cover; }
