--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -120,3 +120,65 @@
         }
     }
 }
+.pick-kit{
+    margin-left: 200px;
+    text-align: center;
+    height: 100vh;
+    position: relative;
+    ul{
+        width: 100%;
+        height: 80vh;
+        position: absolute;
+        bottom: 0;
+        a{
+            text-decoration: none;
+            color: #333;
+            li{
+                width: 33.33333%;
+                height: 100%;
+                float: left;
+            }
+            .bubble{
+                width: 200px;
+                height: 200px;
+                border-radius: 50%;
+                display: block;
+                background-color: rgba(255, 255, 255, 0.687);
+                margin: 0 auto;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                span{
+                    display: block;
+                    padding: 5px;
+                }
+            }
+            &:nth-child(odd) .bubble{
+                position: relative;
+                top:50%;
+            }
+            &:nth-child(even) .bubble{
+                position: relative;
+                top:10%;
+            }
+            &:nth-child(1) li{
+                background-image: url(../../images/貓貓_171225_0011.jpg);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+            }
+            &:nth-child(2) li{
+                background-image: url(../../images/貓貓_171225_0010.jpg);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+            }
+            &:nth-child(3) li{
+                background-image: url(../../images/貓貓_171228_0012.jpg);
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+        }
+    }
+}
