--- a/css/index.css
+++ b/css/index.css
@@ -219,6 +219,20 @@ header {
         transform: scale(1.15);
         transition: .3s; }
 
+.pick-kit .pick-title h2, .shop .shop-title h2 {
+  font-size: 18px;
+  color: #fff;
+  background-color: #333;
+  padding: 15px 30px;
+  margin: 15px 0; }
+
+.shop .shop-title h3 {
+  color: #333;
+  background-color: rgba(144, 143, 143, 0.537);
+  padding: 10px 30px;
+  border: 2px solid #333;
+  margin: 15px 0; }
+
 .banner {
   margin-left: 200px;
   height: 100vh;
@@ -262,70 +276,24 @@ header {
       right: -70px;
       top: 6px; }
 
-.shop {
-  margin-left: 200px;
-  height: 100vh;
-  overflow: hidden; }
-  .shop .container {
-    text-align: center;
-    display: flex;
-    justify-content: space-around; }
-    .shop .container:after {
-      content: '';
-      display: block;
-      clear: both; }
-  .shop .shop-left, .shop .shop-right {
-    position: relative;
-    top: -600px;
-    float: left; }
-    .shop .shop-left img, .shop .shop-right img {
-      display: block;
-      margin: 10px; }
-  .shop .shop-right {
-    top: -300px; }
-  .shop .shop-title {
-    margin-top: 15vh; }
-    .shop .shop-title h2 {
-      color: #fff;
-      background-color: #333;
-      padding: 15px 30px;
-      margin: 15px 0;
-      font-size: 18px; }
-    .shop .shop-title h3 {
-      color: #333;
-      background-color: rgba(144, 143, 143, 0.537);
-      padding: 10px 30px;
-      border: 2px solid #333;
-      margin: 15px 0; }
-  .shop .prod-list {
-    padding: 60px 40px;
-    background-color: rgba(144, 143, 143, 0.537);
-    border: 2px solid #fff;
-    margin-top: 60px; }
-    .shop .prod-list li {
-      position: relative; }
-      .shop .prod-list li a {
-        text-decoration: none;
-        color: #333;
-        padding: 15px;
-        display: block; }
-      .shop .prod-list li:hover:after {
-        position: absolute;
-        content: '';
-        bottom: 0;
-        left: 10px;
-        display: block;
-        width: 105px;
-        height: 2px;
-        background-color: #369;
-        opacity: 0.7;
-        transition: .3s; }
-
 .pick-kit {
   margin-left: 200px;
   text-align: center;
   height: 100vh;
   position: relative; }
+  .pick-kit .pick-title {
+    height: 20vh;
+    display: flex;
+    align-items: center; }
+    .pick-kit .pick-title h2 {
+      height: 40px;
+      line-height: 10px; }
+    .pick-kit .pick-title h3 {
+      color: #333;
+      background-color: rgba(144, 143, 143, 0.537);
+      padding: 10px 30px;
+      border: 2px solid #333;
+      margin: 15px 0; }
   .pick-kit ul {
     width: 100%;
     height: 80vh;
@@ -372,3 +340,62 @@ header {
         background-image: url(../../images/貓貓_171228_0012.jpg);
         background-repeat: no-repeat;
         background-size: cover; }
+  .pick-kit .arrow {
+    width: 50px;
+    height: 60px;
+    background-color: rgba(248, 252, 255, 0.719);
+    position: absolute;
+    top: 57vh;
+    z-index: 999; }
+    .pick-kit .arrow img {
+      width: 100%;
+      height: 100%; }
+  .pick-kit .right-arrow {
+    right: 0; }
+
+.shop {
+  margin-left: 200px;
+  height: 100vh;
+  overflow: hidden; }
+  .shop .container {
+    text-align: center;
+    display: flex;
+    justify-content: space-around; }
+    .shop .container:after {
+      content: '';
+      display: block;
+      clear: both; }
+  .shop .shop-left, .shop .shop-right {
+    position: relative;
+    top: -600px;
+    float: left; }
+    .shop .shop-left img, .shop .shop-right img {
+      display: block;
+      margin: 10px; }
+  .shop .shop-right {
+    top: -300px; }
+  .shop .shop-title {
+    margin-top: 15vh; }
+  .shop .prod-list {
+    padding: 60px 40px;
+    background-color: rgba(144, 143, 143, 0.537);
+    border: 2px solid #fff;
+    margin-top: 60px; }
+    .shop .prod-list li {
+      position: relative; }
+      .shop .prod-list li a {
+        text-decoration: none;
+        color: #333;
+        padding: 15px;
+        display: block; }
+      .shop .prod-list li:hover:after {
+        position: absolute;
+        content: '';
+        bottom: 0;
+        left: 10px;
+        display: block;
+        width: 105px;
+        height: 2px;
+        background-color: #369;
+        opacity: 0.7;
+        transition: .3s; }
