--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
 v2.0 | 20110126
 License: none (public domain)
@@ -280,7 +279,8 @@ header {
   margin-left: 200px;
   text-align: center;
   height: 100vh;
-  position: relative; }
+  position: relative;
+  background-image: url(../../images/marble.jpg); }
   .pick-kit .pick-title {
     height: 20vh;
     display: flex;
@@ -327,17 +327,17 @@ header {
         position: relative;
         top: 10%; }
       .pick-kit ul a:nth-child(1) li {
-        background-image: url(../../images/貓貓_171225_0011.jpg);
+        background-image: url(../../images/catcat_171225_0011.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center; }
       .pick-kit ul a:nth-child(2) li {
-        background-image: url(../../images/貓貓_171225_0010.jpg);
+        background-image: url(../../images/catcat_171225_0010.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center; }
       .pick-kit ul a:nth-child(3) li {
-        background-image: url(../../images/貓貓_171228_0012.jpg);
+        background-image: url(../../images/catcat_171228_0012.jpg);
         background-repeat: no-repeat;
         background-size: cover; }
   .pick-kit .arrow {
@@ -356,7 +356,8 @@ header {
 .shop {
   margin-left: 200px;
   height: 100vh;
-  overflow: hidden; }
+  overflow: hidden;
+  background-image: url(../../images/wood.jpg); }
   .shop .container {
     text-align: center;
     display: flex;
@@ -385,17 +386,7 @@ header {
       position: relative; }
       .shop .prod-list li a {
         text-decoration: none;
-        color: #333;
+        color: #222;
+        font-weight: bolder;
         padding: 15px;
         display: block; }
-      .shop .prod-list li:hover:after {
-        position: absolute;
-        content: '';
-        bottom: 0;
-        left: 10px;
-        display: block;
-        width: 105px;
-        height: 2px;
-        background-color: #369;
-        opacity: 0.7;
-        transition: .3s; }
