--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -71,6 +71,7 @@
     text-align: center;
     height: 100vh;
     position: relative;
+    background-image: url(../../images/marble.jpg);
     .pick-title{
         height: 20vh;
         display: flex;
@@ -126,19 +127,19 @@
                 top:10%;
             }
             &:nth-child(1) li{
-                background-image: url(../../images/貓貓_171225_0011.jpg);
+                background-image: url(../../images/catcat_171225_0011.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
             }
             &:nth-child(2) li{
-                background-image: url(../../images/貓貓_171225_0010.jpg);
+                background-image: url(../../images/catcat_171225_0010.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
             }
             &:nth-child(3) li{
-                background-image: url(../../images/貓貓_171228_0012.jpg);
+                background-image: url(../../images/catcat_171228_0012.jpg);
                 background-repeat: no-repeat;
                 background-size: cover;
             }
@@ -164,6 +165,7 @@
     margin-left: 200px;
     height: 100vh;
     overflow: hidden;
+    background-image: url(../../images/wood.jpg);
     .container{
         @include afterClear();
         text-align: center;
@@ -201,22 +203,23 @@
             position: relative;
             a{
                 text-decoration: none;
-                color: #333;
+                color: #222;
+                font-weight: bolder;
                 padding: $gap;
                 display: block;
             }
-            &:hover:after{
-                position: absolute;
-                content: '';
-                bottom:0;
-                left: 10px;
-                display: block;
-                width: 105px;
-                height: 2px;
-                background-color: #369;
-                opacity: 0.7;
-                transition: .3s;
-            }
+            // &:hover:after{
+            //     position: absolute;
+            //     content: '';
+            //     bottom:0;
+            //     left: 10px;
+            //     display: block;
+            //     width: 105px;
+            //     height: 2px;
+            //     background-color: #369;
+            //     opacity: 0.7;
+            //     transition: .3s;
+            // }
         }
     }
 }
