--- a/css/index.css
+++ b/css/index.css
@@ -218,14 +218,14 @@ header {
         transform: scale(1.15);
         transition: .3s; }
 
-.pick-kit .pick-title h2, .shop .shop-title h2 {
+.pick-kit .pick-title h2, .shelter h2, .shop .shop-title h2 {
   font-size: 18px;
   color: #fff;
   background-color: #333;
   padding: 15px 30px;
   margin: 15px 0; }
 
-.shop .shop-title h3 {
+.pick-kit .pick-title h3, .shelter h3, .shop .shop-title h3 {
   color: #333;
   background-color: rgba(144, 143, 143, 0.537);
   padding: 10px 30px;
@@ -288,12 +288,6 @@ header {
     .pick-kit .pick-title h2 {
       height: 40px;
       line-height: 10px; }
-    .pick-kit .pick-title h3 {
-      color: #333;
-      background-color: rgba(144, 143, 143, 0.537);
-      padding: 10px 30px;
-      border: 2px solid #333;
-      margin: 15px 0; }
   .pick-kit ul {
     width: 100%;
     height: 80vh;
@@ -346,12 +340,56 @@ header {
     background-color: rgba(248, 252, 255, 0.719);
     position: absolute;
     top: 57vh;
-    z-index: 999; }
+    z-index: 666; }
     .pick-kit .arrow img {
       width: 100%;
       height: 100%; }
   .pick-kit .right-arrow {
     right: 0; }
+
+.shelter {
+  margin-left: 200px;
+  background-image: url(../../images/marble.jpg);
+  background-repeat: no-repeat;
+  background-size: cover; }
+  .shelter .shelter-title {
+    height: 20vh;
+    display: flex;
+    align-items: center; }
+  .shelter h2 {
+    height: 40px;
+    line-height: 10px; }
+  .shelter .shelter-home {
+    height: 80vh;
+    width: 75%;
+    margin: auto; }
+    .shelter .shelter-home .figure {
+      width: 55%;
+      height: 30vh;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      position: relative; }
+      .shelter .shelter-home .figure:nth-child(1) {
+        background-image: url(../../images/half_1.jpg); }
+      .shelter .shelter-home .figure:nth-child(2) {
+        background-image: url(../../images/half_2.jpg);
+        margin-top: 6vh; }
+    .shelter .shelter-home .homeContext {
+      position: absolute;
+      width: 80%;
+      padding: 15px;
+      padding-left: 50px;
+      border: 2px solid #333;
+      background-color: #fff;
+      right: -60%;
+      bottom: -30px;
+      z-index: 666; }
+      .shelter .shelter-home .homeContext span {
+        padding: 5px;
+        display: block; }
+      .shelter .shelter-home .homeContext .shelter-name {
+        font-family: notoSans_r; }
 
 .shop {
   margin-left: 200px;
