--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -82,11 +82,7 @@
             line-height: 10px;
         }
         h3{
-            color: #333;
-            background-color: rgba(144, 143, 143, 0.537);
-            padding: 10px 30px;
-            border: 2px solid #333;
-            margin: $gap 0;
+            @extend %h3-btn;
         }
     }
     ul{
@@ -151,7 +147,7 @@
         background-color: rgba(248, 252, 255, 0.719);
         position: absolute;
         top: 57vh;
-        z-index: 999;
+        z-index: 666;
         img{
             width: 100%;
             height: 100%;
@@ -159,6 +155,63 @@
     }
     .right-arrow{
         right: 0;
+    }
+}
+.shelter{
+    margin-left: 200px;
+    background-image: url(../../images/marble.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    .shelter-title{
+        height: 20vh;
+        display: flex;
+        align-items: center;
+    }
+    h2{
+        @extend %h2-btn;
+        height: 40px;
+        line-height: 10px;
+    }
+    h3{
+        @extend %h3-btn;
+    }
+    .shelter-home{
+        height: 80vh;
+        width: 75%;
+        margin: auto;
+        .figure{
+            width: 55%;
+            height: 30vh;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            &:nth-child(1){
+                background-image: url(../../images/half_1.jpg);
+            }
+            &:nth-child(2){
+                background-image: url(../../images/half_2.jpg);
+                margin-top: 6vh;
+            }
+        }
+        .homeContext{
+            position: absolute;
+            width: 80%;
+            padding: $gap;
+            padding-left: 50px;
+            border: 2px solid #333;
+            background-color: #fff;
+            right: -60%;
+            bottom: -30px;
+            z-index: 666;
+            span{
+                padding: 5px;
+                display: block;
+            }
+            .shelter-name{
+                font-family: notoSans_r;
+            }
+        }
     }
 }
 .shop{
