--- a/sass/halfway_house_search.scss
+++ b/sass/halfway_house_search.scss
@@ -10,3 +10,5 @@
 @import 'respond/_medium.scss';
 @import 'respond/_desktop.scss';
 @import 'modules/_halfway_house_search.scss';
+@import 'modules/_header.scss';
+@import 'modules/_footer.scss';
