--- a/sass/modules/_halfway_house_detail.scss
+++ b/sass/modules/_halfway_house_detail.scss
@@ -1,23 +1,17 @@
-.left {
-    width: 20%;
-    height: 100vh;
-    position: fixed;
-    background-color: rgb(245, 197, 225);
-}
 .right {
-    width: 80%;
     background-color: #D3DAE2;
     position: relative;
-    left: 20%;
+    margin-left: 200px;
     .banner {
         background-image: url(../../images/33184672765_a14d959f8b_o.jpg);
         width: 90%;
         height: 500px;
         margin: auto;
         .text {
-            color: #fff;
+            color: #000;
             font-size: 100px;
             width: 100%;
+            padding-top: 5%;
             text-align: center;
         }
     }
@@ -90,44 +84,21 @@
             text-align: center;
             font-size: 50px;
         }
-        .catup {
-            width: 60%;
-            margin: 3% auto;
-            .container {
-                display: flex;
-                justify-content: space-around;
-                .text {
-                    font-size: 20px;
-                    line-height: 30px;
-                    h3 {
-                        font-size: 30px;
-                        font-weight: bold;
-                    }
+        .container {
+            display: flex;
+            justify-content: space-around;
+            padding-bottom: 5%;
+            .text {
+                font-size: 20px;
+                line-height: 30px;
+                h3 {
+                    font-size: 30px;
+                    font-weight: bold;
                 }
-            }
-            img {
-                width: 350px;
             }
         }
-        .catdown {
-            width: 60%;
-            margin: 3% auto;
-            padding-bottom: 5%;
-            .container {
-                display: flex;
-                justify-content: space-around;
-                .text {
-                    font-size: 20px;
-                    line-height: 30px;
-                    h3 {
-                        font-size: 30px;
-                        font-weight: bold;
-                    }
-                }
-            }
-            img {
-                width: 250px;
-            }
+        img {
+            width: 250px;
         }
     }
 }
@@ -143,11 +114,11 @@
         text-align: center;
         font-size: 50px;
     }
+
     img {
         width: 100%;
     }
 }
-
 .talk {
     .container {
         width: 70%;
@@ -167,7 +138,8 @@
             float: left;
             background: #58a;
             border-radius: 20px;
-            &:nth-child(3),&:nth-child(5) {
+            &:nth-child(3),
+            &:nth-child(5) {
                 float: right;
             }
             p {
