--- a/sass/modules/_halfway_house_search.scss
+++ b/sass/modules/_halfway_house_search.scss
@@ -282,7 +282,7 @@
     }
     .item {
         width: 70%;
-        margin: 500px auto;
+        margin: 600px auto 50px auto;
         margin-left: 20%;
         position: relative;
         .text {
