--- a/sass/halfway_house_detail.scss
+++ b/sass/halfway_house_detail.scss
@@ -5,6 +5,7 @@
 @import 'layout/_container.scss';
 @import 'mixins/_rwd.scss';
 @import 'mixins/_clearfloat.scss';
+@import './mixins/_navNow.scss';
 @import 'modules/_btns.scss';
 @import 'respond/_small.scss';
 @import 'respond/_medium.scss';
