--- a/sass/modules/_halfway_house_search.scss
+++ b/sass/modules/_halfway_house_search.scss
@@ -1,20 +1,22 @@
 .right {
-    height: 300vh;
     position: relative;
     margin-left: 200px;
-    background-color: #D3DAE2;
+    padding-bottom: 200px;
+    background-image: url(../../images/marble.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     z-index: 0;
     .searchsection{
-        width: 34%;
+        width: 50%;
         background-color: rgba(90, 107, 126, 0.767);
         position: absolute;
         top: 8%;
-        left: 38%;
+        left: 25%;
         z-index: 0;
         .dropholder {
-            width: 337.5px;
+            width: 322px;
             height: 60px;
-            margin: 130px 0 100px 60px;
+            margin: 130px 0 250px 30%;
             padding: 0 0 0 20px;
             border-radius: 60px;
             font: 18px arial;
@@ -31,7 +33,7 @@
                 height: 5px;
                 background: rgba(0, 0, 0, 0);
                 display: block;
-                top: 100px;
+                top: 250px;
                 left: 37px;
                 margin: auto;
                 border-radius: 50%;
@@ -41,6 +43,7 @@
             p {
                 float: left;
                 line-height: 60px;
+                font-size: $font-size-base;
             }
         }
 
@@ -50,7 +53,7 @@
         }
 
         .dropdown>p {
-            font-size: 16px;
+            font-size: $font-size-base;
         }
 
         .dropdown,
@@ -61,11 +64,11 @@
         .dropdown {
             margin-left: 20px;
             float: left;
-            width: 225px;
+            width: 221px;
             padding: 0 0 0 20px;
             border-radius: 0 60px 60px 0;
             cursor: pointer;
-            height: 58px;
+            height: 57px;
             border-left: 2px solid #fff;
             position: relative;
             &:hover {
@@ -74,7 +77,7 @@
             }
             &:after {
                 content: "▾";
-                font-size: 18px;
+                font-size: $font-size-large;
                 position: absolute;
                 right: 20px;
                 top: 18px;
@@ -161,8 +164,8 @@
             z-index: 999;
             height: 40px;
             width: 300px;
-            top: 25%;
-            left: 100%;
+            top: 20%;
+            left: 80%;
             margin-left: 8%;
             transform: translate(-50%, -50%);
         }
@@ -182,7 +185,7 @@
             border-radius: 50%;
             background: none;
             color: #fff;
-            font-size: 16px;
+            font-size: $font-size-base;
             font-weight: 400;
             outline: none;
             transition: width 0.4s ease-in-out, border-radius 0.8s ease-in-out, padding 0.2s;
@@ -255,7 +258,7 @@
             background: none;
             color: #fff;
             font-family: Roboto;
-            font-size: 16px;
+            font-size: $font-size-base;
             font-weight: 400;
             outline: 0;
             transition: width 0.4s ease-in-out, border-radius 0.4s ease-in-out, padding 0.2s;
@@ -267,33 +270,24 @@
 
 
     h2 {
-        font-size: 36px;
+        font-size: $font-size-h2;
         text-align: center;
         padding-top: 5%;
-        color: #fff;
-    }
-    .back {
-        background-color: #2C3849;
-        width: 34%;
-        height: 300vh;
-        position: absolute;
-        left: 33%;
-        z-index: -5;
+        color: #ccc;
     }
     .item {
         width: 70%;
-        margin: 600px auto 50px auto;
-        margin-left: 20%;
+        margin: 300px 0 0 23%;
         position: relative;
         .text {
             width: 40%;
             background-color: #fff;
-            font-size: 18px;
+            font-size: $font-size-base;
             line-height: 30px;
             padding-left: 5%;
             padding-bottom: 5%;
             h4 {
-                font-size: 18px;
+                font-size: $font-size-h4;
                 padding-top: 8%;
             }
         }
@@ -323,5 +317,8 @@
         .bg3 {
             background-color: rgba(139, 105, 73, 0.767);
         }
+    }
+    .item1 {
+        margin-top: 580px;
     }
 }
