--- a/sass/searchCat.scss
+++ b/sass/searchCat.scss
@@ -21,6 +21,7 @@
         width: calc(100% - 200px);
         position: relative;
         padding-top: 40px;
+        margin-bottom: 40px;
         a {
             text-decoration: none;
         }
